--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Anton+SC&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Anton+SC&display=swap");
 * {
   padding: 0px;
   margin: 0px;
@@ -14,13 +14,13 @@ nav {
   padding: 30px;
   position: fixed;
 }
-nav, 
+nav,
 ul,
 h1,
 li {
   display: flex;
 }
-h1{
+h1 {
   font-size: 30px;
 }
 ul {
@@ -30,13 +30,13 @@ li {
   font-size: 23px;
   margin-left: 46px;
 }
-li a{
+li a {
   transition: transform 0.5s;
   color: gray;
   text-decoration: none;
   cursor: pointer;
 }
-li a:hover{
+li a:hover {
   transform: translateY(-5px);
   color: rgb(255, 255, 255);
 }
@@ -72,30 +72,29 @@ li a:hover{
   margin-top: 5%;
   margin-left: 50px;
 }
-.Project{
+.Project {
   color: rgb(0, 0, 0);
   display: inline;
- grid-template-columns: repeat(auto-fit, minmax(250px, 1ffr));
- grid-gap: 40px;
- margin-top: 50px;
- margin-left: 260px;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1ffr));
+  grid-gap: 40px;
+  margin-top: 50px;
+  margin-left: 260px;
 }
-.Project-1{
+.Project-1 {
   display: inline-block;
-    border-radius: 10px;
-    position: relative;
-    overflow: hidden;
-    margin-top: 5%;
-    margin-left: 4%;
-    margin-right: 3%;
-    
+  border-radius: 10px;
+  position: relative;
+  overflow: hidden;
+  margin-top: 5%;
+  margin-left: 4%;
+  margin-right: 3%;
 }
-.Project-1 img{
-   border-radius: 10px;
-   display: block;
-   transition: transform 0.5s;
+.Project-1 img {
+  border-radius: 10px;
+  display: block;
+  transition: transform 0.5s;
 }
-.layer{
+.layer {
   width: 300px;
   height: 0;
   background: linear-gradient(rgba(0, 0, 0, 0.6), #ffffff);
@@ -113,11 +112,11 @@ li a:hover{
   font-size: 14px;
   transition: height 0.5s;
 }
-.layer h3{
+.layer h3 {
   font-weight: 500;
   margin-bottom: 20px;
 }
-.layer a{
+.layer a {
   margin-top: 20px;
   color: #000000;
   text-decoration: none;
@@ -129,39 +128,38 @@ li a:hover{
   border-radius: 50%;
   text-align: center;
 }
-.Project-1:hover img{
+.Project-1:hover img {
   transform: scale(1.1);
 }
-.Project-1:hover .layer{
+.Project-1:hover .layer {
   height: 100%;
 }
-.Project-1 p{
+.Project-1 p {
   margin-right: 8px;
 }
-.section-About{
-   background-color: rgb(0, 0, 0);
-   color: rgb(255, 255, 255);
-   text-align: center;
-   margin-top: 1%;
-   padding: 20px;
+.section-About {
+  background-color: rgb(0, 0, 0);
+  color: rgb(255, 255, 255);
+  text-align: center;
+  margin-top: 1%;
+  padding: 20px;
 }
-.section-About h1{
+.section-About h1 {
   margin-left: 840px;
 }
-.section-About p{
+.section-About p {
   padding: 20px;
 }
 @media screen and (max-width: 600px) {
-
   nav {
     padding: 9px;
     z-index: 1000;
   }
-  .heading {  
+  .heading {
     background-size: 100% 100%;
     height: 481px;
   }
- 
+
   .section-About h1 {
     margin-left: 200px;
   }
@@ -173,7 +171,7 @@ li a:hover{
     margin-left: 110px;
   }
   .texts {
-    max-width:200px;
+    max-width: 200px;
     padding-top: 210px;
     margin-left: 340px;
   }
@@ -181,38 +179,37 @@ li a:hover{
     font-size: 14px;
     font-weight: 40;
   }
-  
+
   .texts h1 {
     font-size: 35px;
     font-weight: 50;
     margin: -1px 0;
   }
   nav,
-ul,
-h1,
-li {
-  display: flex;
-}
-h1 {
-  font-size: 26px;
-}
-ul {
-  
-  margin-left: 232.5px;
-}
-li {
-  padding: 3px;
-  font-size: 15px;
-  margin-left: 7.1px;
-  margin-top: 5px;
-}
-#section-Project {
-  color: rgb(245, 245, 245);
-  font-size: 41px;
-  margin-top: 5%;
-  margin-left: 10px; 
-}
-.section-About h1 {
+  ul,
+  h1,
+  li {
+    display: flex;
+  }
+  h1 {
+    font-size: 26px;
+  }
+  ul {
+    margin-left: 232.5px;
+  }
+  li {
+    padding: 3px;
+    font-size: 15px;
+    margin-left: 7.1px;
+    margin-top: 5px;
+  }
+  #section-Project {
+    color: rgb(245, 245, 245);
+    font-size: 41px;
+    margin-top: 5%;
+    margin-left: 10px;
+  }
+  .section-About h1 {
     margin-left: 140px;
   }
   .section-About p {
@@ -223,189 +220,7 @@ li {
     margin-top: -1%;
     padding: 1px;
   }
-.layer{
-  width: 300px;
-  height: 600px;
-  border-radius: 10px;
-  position: absolute;
-  left: 0;
-  bottom: 0;
-  overflow: visible;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  padding: 0 40px;
-  text-align: center;
-  font-size: 14px;
-  transition: height 0.5s;
-}
-.layer h3{
-  font-weight: 500;
-  margin-bottom: 20px;
-}
-.layer a{
-  margin-top: 20px;
-  color: #000000;
-  text-decoration: none;
-  font-size: 18px;
-  line-height: 60px;
-  background: #ffffff;
-  width: 60px;
-  height: 60px;
-  border-radius: 50%;
-  text-align: center;
-}
-}
-@media screen and (max-width: 425px) {
-nav {
-    padding: 9px;
-    z-index: 1000;
-  }
-  .heading {  
-    background-size: 100% 100%;
-    height: 481px;
-  }
-  .section-About h1 {
-    margin-left: 120px;
-  }
-  .section-About p {
-    padding: 1px;
-  }
-  .Project {
-    display: inline-block;
-    margin-left: 30px;
-  }
-  .texts {
-    max-width:200px;
-    padding-top: 240px;
-    margin-left: 265px;
-  }
-  .texts h3 {
-    font-size: 13px;
-    font-weight: 40;
-  }
-  
-  .texts h1 {
-    font-size: 20px;
-    font-weight: 30;
-    margin: -1px 0;
-  }
-  nav,
-ul,
-h1,
-li {
-  display: flex;
-}
-h1 {
-  font-size: 18px;
-}
-ul {
-  margin-left: 168.5px;
-}
-li {
-  font-size: 10px;
-  margin-left: 7.1px;
-  margin-top: 9px;
-}
-.section-About {
-  margin-top: -9%;
-  padding: 8px;
-}
-.section-About p {
-  margin-left: 1px;
-  
-}
-.layer{
-  width: 300px;
-  height: 600px;
-  border-radius: 10px;
-  position: absolute;
-  left: 0;
-  bottom: 0;
-  overflow: visible;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  padding: 0 40px;
-  text-align: center;
-  font-size: 14px;
-  transition: height 0.5s;
-}
-.layer h3{
-  font-weight: 500;
-  margin-bottom: 20px;
-}
-.layer a{
-  margin-top: 20px;
-  color: #000000;
-  text-decoration: none;
-  font-size: 18px;
-  line-height: 60px;
-  background: #ffffff;
-  width: 60px;
-  height: 60px;
-  border-radius: 50%;
-  text-align: center;
-}
-}
-@media screen and (max-width: 375px) {
-  nav,
-ul,
-h1,
-li {
-  display: flex;
-  z-index: 1000;
-}
-h1 {
-  font-size: 20px;
-}
-ul {
-  margin-left: 130px;
-}
-li {
-  font-size: 10px;
-  margin-left: 8px;
-  margin-top: 9px;
-}
-.texts {
-  max-width:200px;
-  padding-top: 220px;
-  margin-left: 240px;
-}
-.texts h3 {
-  font-size: 12px;
-  font-weight: 40;
-}
-
-.texts h1 {
-  font-size: 20px;
-  font-weight: 15;
-  margin: -1px 0;
-}
-.Project {
-  display: inline-block;
-  margin-left: 1px;
-  margin-top: 1px;
-}
-#section-Project {
-  color: rgb(245, 245, 245);
-  font-size: 41px;
-  margin-top: 2%;
-  margin-left: 10px; 
-}
-.section-About h1 {
-    margin-left: 140px;
-  }
-  .section-About p {
-    padding: 8px;
-  }
-  .section-About {
-    margin-top: -9%;
-    padding: 1px;
-  }
-  .layer{
+  .layer {
     width: 300px;
     height: 600px;
     border-radius: 10px;
@@ -422,11 +237,11 @@ li {
     font-size: 14px;
     transition: height 0.5s;
   }
-  .layer h3{
+  .layer h3 {
     font-weight: 500;
     margin-bottom: 20px;
   }
-  .layer a{
+  .layer a {
     margin-top: 20px;
     color: #000000;
     text-decoration: none;
@@ -439,4 +254,268 @@ li {
     text-align: center;
   }
 }
+@media screen and (max-width: 425px) {
+  nav {
+    padding: 9px;
+    z-index: 1000;
+  }
+  .heading {
+    background-size: 100% 100%;
+    height: 481px;
+  }
+  .section-About h1 {
+    margin-left: 120px;
+  }
+  .section-About p {
+    padding: 1px;
+  }
+  .Project {
+    display: inline-block;
+    margin-left: 30px;
+  }
+  .texts {
+    max-width: 200px;
+    padding-top: 240px;
+    margin-left: 265px;
+  }
+  .texts h3 {
+    font-size: 13px;
+    font-weight: 40;
+  }
 
+  .texts h1 {
+    font-size: 20px;
+    font-weight: 30;
+    margin: -1px 0;
+  }
+  nav,
+  ul,
+  h1,
+  li {
+    display: flex;
+  }
+  h1 {
+    font-size: 18px;
+  }
+  ul {
+    margin-left: 168.5px;
+  }
+  li {
+    font-size: 10px;
+    margin-left: 7.1px;
+    margin-top: 9px;
+  }
+  .section-About {
+    margin-top: -9%;
+    padding: 8px;
+  }
+  .section-About p {
+    margin-left: 1px;
+  }
+  .layer {
+    width: 300px;
+    height: 600px;
+    border-radius: 10px;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    overflow: visible;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    padding: 0 40px;
+    text-align: center;
+    font-size: 14px;
+    transition: height 0.5s;
+  }
+  .layer h3 {
+    font-weight: 500;
+    margin-bottom: 20px;
+  }
+  .layer a {
+    margin-top: 20px;
+    color: #000000;
+    text-decoration: none;
+    font-size: 18px;
+    line-height: 60px;
+    background: #ffffff;
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+    text-align: center;
+  }
+}
+@media screen and (max-width: 375px) {
+  nav,
+  ul,
+  h1,
+  li {
+    display: flex;
+    z-index: 1000;
+  }
+  h1 {
+    font-size: 20px;
+  }
+  ul {
+    margin-left: 110px;
+  }
+  li {
+    font-size: 10px;
+    margin-left: 7px;
+    margin-top: 9px;
+  }
+  .texts {
+    max-width: 200px;
+    padding-top: 220px;
+    margin-left: 240px;
+  }
+  .texts h3 {
+    font-size: 12px;
+    font-weight: 40;
+  }
+
+  .texts h1 {
+    font-size: 20px;
+    font-weight: 15;
+    margin: -1px 0;
+  }
+  .Project {
+    display: inline-block;
+    margin-left: 1px;
+    margin-top: 1px;
+  }
+  #section-Project {
+    color: rgb(245, 245, 245);
+    font-size: 41px;
+    margin-top: 2%;
+    margin-left: 10px;
+  }
+  .section-About h1 {
+    margin-left: 140px;
+  }
+  .section-About p {
+    padding: 8px;
+  }
+  .section-About {
+    margin-top: -9%;
+    padding: 1px;
+  }
+  .layer {
+    width: 300px;
+    height: 600px;
+    border-radius: 10px;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    overflow: visible;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    padding: 0 40px;
+    text-align: center;
+    font-size: 14px;
+    transition: height 0.5s;
+  }
+  .layer h3 {
+    font-weight: 500;
+    margin-bottom: 20px;
+  }
+  .layer a {
+    margin-top: 20px;
+    color: #000000;
+    text-decoration: none;
+    font-size: 18px;
+    line-height: 60px;
+    background: #ffffff;
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+    text-align: center;
+  }
+}
+@media screen and (max-width: 320px) {
+  nav,
+  ul,
+  h1,
+  li {
+    display: flex;
+    z-index: 1000;
+  }
+  h1 {
+    font-size: 20px;
+  }
+  ul {
+    margin-left: 71px;
+  }
+  li {
+    font-size: 10px;
+    margin-left: 2px;
+    margin-top: 9px;
+  }
+  .texts {
+    max-width: 200px;
+    padding-top: 220px;
+    margin-left: 170px;
+  }
+  .texts h3 {
+    font-size: 12px;
+    font-weight: 40;
+  }
+
+  .texts h1 {
+    font-size: 20px;
+    font-weight: 15;
+    margin: -1px 0;
+  }
+  .heading {
+    background-size: 100% 100%;
+    height: 481px;
+  }
+  .Project-1 {
+    width: 300px;
+  }
+  .heading {
+    background-size: 100% 100%;
+    width: 323px;
+    height: 493px;
+  }
+  .layer {
+    width: 300px;
+    height: 570px;
+    border-radius: 10px;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    overflow: visible;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    padding: 0 0px;
+    text-align: center;
+    font-size: 12px;
+    transition: height 0.5s;
+  }
+  .layer h3 {
+    font-weight: 500;
+    margin-bottom: 20px;
+    margin-left: -10px;
+  }
+  .layer p {
+    margin-left: 10px;
+  }
+  .layer a {
+    margin-top: 20px;
+    color: #000000;
+    text-decoration: none;
+    font-size: 18px;
+    line-height: 60px;
+    background: #ffffff;
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+    text-align: center;
+  }
+}
